Creato con Colaboratory

--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOoqXGCnDYZ3mBqDgSE05WN"
+      "authorship_tag": "ABX9TyNFLVo074uzAurwLs0GpC11"
     },
     "kernelspec": {
       "name": "ir",
@@ -359,7 +359,9 @@
       },
       "source": [
         "### Export images\n",
-        "In the resulting map, bodies of water and wetlands are blue as well as shadows (class one). Clouds belong to the third gray class, and plateaus covered with vegetation or with darker soils are red and black."
+        "In the resulting map, bodies of water and wetlands are blue as well as shadows (class one). Clouds belong to the third gray class, and plateaus covered with vegetation or with darker soils are red and black.\n",
+        "\n",
+        "N.B. always use the [dev.off](https://www.rdocumentation.org/packages/imguR/versions/0.1.5/topics/dev.off) function to manage the correct closing and loading of the graphics space."
       ]
     },
     {
