--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzs/axjJMokbwPCKUKQRsY"
+      "authorship_tag": "ABX9TyP112DnxTs1VNZhwZaZcFw2"
     },
     "kernelspec": {
       "name": "ir",
@@ -44,6 +44,10 @@
         "The most conspicuous difference between the images is the widespread forest clearing—visible as rectangles of gray-beige—that had occurred by 2006. The most intense areas of clearing appear along roadways, such as road MT-419, which runs east to west north of the river. A 2006 study found that Brazil’s mechanized agriculture increased by more than 3.6 million hectares (8.9 million acres) between 2001 and 2004, growing more than 540,000 hectares (1.3 million acres) in Mato Grosso alone. Clearing for pasture was still the leading cause of deforestation at that time, but the contribution from large agricultural clearings, such as for soy plantations, was increasing.\n",
         "\n",
         "<table>\n",
+        "  <tr>\n",
+        "     <td>Mato Grosso on August 6, 1992</td>\n",
+        "     <td>MAto Grosso on July 28, 2006</td>\n",
+        "  </tr>\n",
         "  <tr>\n",
         "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=500</td>\n",
         "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\" width=500</td>\n",
