Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP112DnxTs1VNZhwZaZcFw2"
+      "authorship_tag": "ABX9TyOZ36PzCm5h/rKU2l5hgNG4"
     },
     "kernelspec": {
       "name": "ir",
@@ -46,7 +46,7 @@
         "<table>\n",
         "  <tr>\n",
         "     <td>Mato Grosso on August 6, 1992</td>\n",
-        "     <td>MAto Grosso on July 28, 2006</td>\n",
+        "     <td>Mato Grosso on July 28, 2006</td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td><img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\" width=500</td>\n",
@@ -55,6 +55,18 @@
         "</table>\n",
         "\n",
         "<font size=\"2\"> [*NASA images*](https://earthobservatory.nasa.gov/images/35891/deforestation-in-mato-grosso-brazil) *created by Jesse Allen, using Landsat data provided by the United States Geological Survey and ASTER data provided courtesy of NASA/GSFC/METI/ERSDAC/JAROS, and U.S./Japan ASTER Science Team. Caption by Michon Scott.*</font> "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vt6jl2R60mvB"
+      },
+      "source": [
+        "<p float=\"center\">\n",
+        "  <img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_l5_1992219_lrg.jpg\"  width=\"500\" />\n",
+        "  <img src=\"https://eoimages.gsfc.nasa.gov/images/imagerecords/35000/35891/matogrosso_ast_2006209_lrg.jpg\" width=\"500\" /> \n",
+        "</p>"
       ]
     },
     {
