Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2hBGn1id5S4oPIviS8lGK"
+      "authorship_tag": "ABX9TyMGY9rHPtSCSP1iUgDUZaPB"
     },
     "kernelspec": {
       "name": "ir",
@@ -112,7 +112,7 @@
       "source": [
         "setwd(\"/content\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,9 @@
         "\n",
         "Download Landsat images of the Parakanã Indigenous Reserve from this [link]() to get the data to use in this example.\n",
         "\n",
-        "![](https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258)\n"
+        "\n",
+        "![AMAZON, BRAZIL- JULY 29, 2017: Deforestation surrounding the Parakana Indigenous Reserve in the Brazilian State of Para, Northern Region of Brazil.(Photo by Gallo Images / USGS / NASA Landsat data / Orbital Horizon)](https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258?k=6&m=959485258&s=612x612&w=0&h=MehPfqdZHxUZikRg4-j3qTsXPj5h6f4sHcUrE31h82U=)\n",
+        "\n"
       ]
     },
     {
@@ -159,7 +161,7 @@
         "p224r63_2011 <- raster::brick(\"p224r63_2011_masked.grd\")\n",
         "p224r63_2011"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -278,7 +280,7 @@
       "source": [
         "summary(p224r63_2011.pca$model)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,7 +338,7 @@
       "source": [
         "loadings(p224r63_2011.pca$model)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -453,7 +455,7 @@
         "p224r63_2011.res <- aggregate(p224r63_2011, fun=mean, fact=10)\n",
         "p224r63_2011.res"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -494,7 +496,7 @@
         "# PCA resampling\n",
         "p224r63_2011.res.pca <- RStoolbox::rasterPCA(p224r63_2011.res)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
