Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMGY9rHPtSCSP1iUgDUZaPB"
+      "authorship_tag": "ABX9TyMxwqhz0BTw6C+m1GJpYFw7"
     },
     "kernelspec": {
       "name": "ir",
@@ -128,8 +128,9 @@
         "\n",
         "Download Landsat images of the Parakanã Indigenous Reserve from this [link]() to get the data to use in this example.\n",
         "\n",
+        "<img src=\"https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258?k=6&m=959485258&s=612x612&w=0&h=MehPfqdZHxUZikRg4-j3qTsXPj5h6f4sHcUrE31h82U=\" width=\"1000\"/>\n",
         "\n",
-        "![AMAZON, BRAZIL- JULY 29, 2017: Deforestation surrounding the Parakana Indigenous Reserve in the Brazilian State of Para, Northern Region of Brazil.(Photo by Gallo Images / USGS / NASA Landsat data / Orbital Horizon)](https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258?k=6&m=959485258&s=612x612&w=0&h=MehPfqdZHxUZikRg4-j3qTsXPj5h6f4sHcUrE31h82U=)\n",
+        "<font size=\"2\"> *AMAZON, BRAZIL- JULY 29, 2017: Deforestation surrounding the Parakana Indigenous Reserve in the Brazilian State of Para, Northern Region of Brazil. (Photo by Gallo Images/USGS/NASA Landsat data/Orbital Horizon)*<font>\n",
         "\n"
       ]
     },
