Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPuEHg7OsMgorbG63h3q51i"
+      "authorship_tag": "ABX9TyMY3elGbBbjbZzMX0V2RjN2"
     },
     "kernelspec": {
       "name": "ir",
@@ -302,12 +302,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gXhj73rrSF4c",
-        "outputId": "c7c0932c-57c7-42ea-f9b0-f2c6c3ca43af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "gXhj73rrSF4c",
+        "outputId": "c7c0932c-57c7-42ea-f9b0-f2c6c3ca43af"
       },
       "source": [
         "mato_grosso_2006@extent <- mato_grosso_1992@extent\n",
@@ -351,12 +351,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kyCM1c6Dtqe8",
-        "outputId": "46472154-23ac-4b53-f90b-fb761d38a990",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "kyCM1c6Dtqe8",
+        "outputId": "46472154-23ac-4b53-f90b-fb761d38a990"
       },
       "source": [
         "mato_grosso_2006.res <- aggregate(mato_grosso_2006, fun=mean, fact=2)\n",
@@ -517,11 +517,11 @@
         "id": "CH30ZUz04MXn"
       },
       "source": [
-        "pdf(file='/content/time_difference.pdf')\n",
+        "pdf(file='/content/difference_dvi.pdf')\n",
         "dif_dvi <- dvi_1992 - dvi_2006\n",
         "cld <- colorRampPalette(c('blue','white','red'))(300)\n",
         "plot(dif_dvi, col=cld, axes=FALSE)\n",
-        "dev.off()\n"
+        "dev.off()"
       ],
       "execution_count": null,
       "outputs": []
@@ -551,9 +551,9 @@
       },
       "source": [
         "ndvi_1992 <- (mato_grosso_1992$nir - mato_grosso_1992$red)/(mato_grosso_1992$nir + mato_grosso_1992$red)\n",
-        "ndvi_2006 <- (mato_grosso_2006$nir - mato_grosso_2006$red)/(mato_grosso_2006$nir + mato_grosso_2006$red)"
+        "ndvi_2006 <- (mato_grosso_2006.res$nir - mato_grosso_2006.res$red)/(mato_grosso_2006.res$nir + mato_grosso_2006.res$red)"
       ],
-      "execution_count": 168,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -562,9 +562,11 @@
         "id": "BuvOSb-bmQBI"
       },
       "source": [
+        "pdf(file = \"/content/difference_ndvi.pdf\")\n",
         "dif_ndvi <- ndvi_1992 - ndvi_2006\n",
         "cld <- colorRampPalette(c('blue','white','red'))(100)\n",
-        "plot(dif_ndvi, col=cld, axes=FALSE)"
+        "plot(dif_ndvi, col=cld, axes=FALSE)\n",
+        "dev.off()"
       ],
       "execution_count": null,
       "outputs": []
@@ -616,8 +618,13 @@
         "id": "vWO1AM9p4Y1E"
       },
       "source": [
-        "vegetation_indices_2006 <- RStoolbox::spectralIndices(mato_grosso_2006, green = 3, red = 2, nir = 1)\n",
-        "plot(vegetation_indices_2006, col=cl)"
+        "idx = c(\"DVI\",\"NDVI\",\"TVI\",\"GEMI\",\"GNDVI\",\"NDWI\", \"NRVI\",\"SAVI\",\"WDVI\")\n",
+        "vegetation_indices_2006 <- RStoolbox::spectralIndices(mato_grosso_2006.res, \n",
+        "                                                      green = 3, red = 2, nir = 1,\n",
+        "                                                      indices = idx)\n",
+        "pdf(file = \"/content/vegetation_indices_2006.pdf\")                                                      \n",
+        "plot(vegetation_indices_2006, col=cl)\n",
+        "dev.off()"
       ],
       "execution_count": null,
       "outputs": []
