Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMY3elGbBbjbZzMX0V2RjN2"
+      "authorship_tag": "ABX9TyOVjBLpQrQ6SSCKbgWYxBva"
     },
     "kernelspec": {
       "name": "ir",
@@ -537,9 +537,8 @@
         "The combination of its normalized difference formulation and use of the highest absorption and reflectance regions of chlorophyll make it robust over a wide range of conditions. \n",
         "It can, however, saturate in dense vegetation conditions when LAI (Leaf Area Index) becomes high.\n",
         "\n",
-        "\\begin{equation}\n",
-        "\\mathrm{NDVI=\\frac{NIR-red}{NIR+red}}\n",
-        "\\end{equation}\n",
+        "$\\mathrm{NDVI=\\frac{NIR-red}{NIR+red}}$\n",
+        "\n",
         "\n",
         "The value of this index ranges from −1 to 1. The common range for green vegetation is 0.2–0.8."
       ]
