Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNknwf76f5LmPpXXXMYBWiL"
+      "authorship_tag": "ABX9TyPi3jRP0Y+k/av7q7LNKP1K"
     },
     "kernelspec": {
       "name": "ir",
@@ -144,7 +144,7 @@
         "To read and view a multilevel object it is common to use the [brick](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/brick) function.\n",
         "Select the images already pre-processed for the year 2011. Explore the properties of the `p224r63_2011` object.\n",
         "\n",
-        "Also there may be multiple functions with the same name in multiple packages. The colon operator allows you to specify the specific function you want: `package::functionname`\n",
+        "Also there may be multiple functions with the same name in multiple packages. The colon operator allows you to specify the specific function you want: `package::function_name`\n",
         "\n"
       ]
     },
@@ -406,7 +406,7 @@
       "source": [
         "In practice, the PCA technique highlights elements or details not visible in the original image. It also solves color display problems of multispectral images in which only three color dimensions (blue, green, and red) are available.\n",
         "\n",
-        "Use the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par)  function to compare the original true and false color images with the image resulting from the combination of three PCs (PC1, PC2 and PC3).\n"
+        "Use the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par) function to compare the original true and false color images with the image resulting from the combination of three PCs (PC1, PC2 and PC3).\n"
       ]
     },
     {
