Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVjBLpQrQ6SSCKbgWYxBva"
+      "authorship_tag": "ABX9TyMdun3AiRIS7WBfujiJwPO0"
     },
     "kernelspec": {
       "name": "ir",
@@ -437,7 +437,7 @@
         "### Difference vegetation index (DVI)\n",
         "Probably the simplest vegetation index. \n",
         "\n",
-        "$\\mathrm{DVI=NIR−Red}$\n",
+        "$DVI=NIR−RED$\n",
         "\n",
         "This index distinguishes between soil and vegetation, but it does not account for the difference between reflectance and radiance caused by atmospheric effects or shadows.\n"
       ]
@@ -537,8 +537,7 @@
         "The combination of its normalized difference formulation and use of the highest absorption and reflectance regions of chlorophyll make it robust over a wide range of conditions. \n",
         "It can, however, saturate in dense vegetation conditions when LAI (Leaf Area Index) becomes high.\n",
         "\n",
-        "$\\mathrm{NDVI=\\frac{NIR-red}{NIR+red}}$\n",
-        "\n",
+        "$$NDVI=\\frac{NIR-RED}{NIR+RED}$$\n",
         "\n",
         "The value of this index ranges from −1 to 1. The common range for green vegetation is 0.2–0.8."
       ]
