Creato con Colaboratory

--- a/R_code_vegetation_indices.ipynb
+++ b/R_code_vegetation_indices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_vegetation_indices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdun3AiRIS7WBfujiJwPO0"
+      "authorship_tag": "ABX9TyPtpFPmD+yjsNaz4Qli2EIS"
     },
     "kernelspec": {
       "name": "ir",
@@ -437,7 +437,7 @@
         "### Difference vegetation index (DVI)\n",
         "Probably the simplest vegetation index. \n",
         "\n",
-        "$DVI=NIR−RED$\n",
+        "$DVI={NIR}-{RED}$\n",
         "\n",
         "This index distinguishes between soil and vegetation, but it does not account for the difference between reflectance and radiance caused by atmospheric effects or shadows.\n"
       ]
