--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSEqcJG47FIUvkS5MkVoLy"
+      "authorship_tag": "ABX9TyPvZkmyM0uEySSwSL5iUAHi"
     },
     "kernelspec": {
       "name": "ir",
@@ -22,7 +22,7 @@
         "id": "WfzIAI-J6TEO"
       },
       "source": [
-        "<table class=\"ee-notebook-buttons\" align=\"left\"><td>\n",
+        "<table class=\"ee-notebook-buttons\" align=\"left\" border=\"10\"><td>\n",
         "<a target=\"_blank\"  href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_land_cover.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
         "</td><td>\n",
