Creato con Colaboratory

--- a/R_code_land_cover.ipynb
+++ b/R_code_land_cover.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_land_cover.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvZkmyM0uEySSwSL5iUAHi"
+      "authorship_tag": "ABX9TyN8TgHH1I9KG/zHO/FLvsWO"
     },
     "kernelspec": {
       "name": "ir",
@@ -22,11 +22,11 @@
         "id": "WfzIAI-J6TEO"
       },
       "source": [
-        "<table class=\"ee-notebook-buttons\" align=\"left\" border=\"10\"><td>\n",
+        "<table class=\"ee-notebook-buttons\" align=\"left\" cellspacing=\"0\" cellpadding=\"0\"><td>\n",
         "<a target=\"_blank\"  href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_land_cover.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
         "</td><td>\n",
-        "<a target=\"_blank\"  href=\"https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_land_cover.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a></td></table>"
+        "<a target=\"_blank\"  href=\"https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_land_cover.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a></td></table>"
       ]
     },
     {
